# scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: README.md
.github/copilot/: instructions.md
aprender/: classes_em_python.py
sigaa/analise/: extrair_ofertas.py  manipulacao.R  transf.ipynb  transf.py  transformar.py
sigaa/data/cursos/: cursos.csv  cursos.jsonl
sigaa/data/docentes/: departamentos.json  docentes.json  docentes.jsonl  docentes_test.jsonl
sigaa/data/ofertas/: 2025-1.jsonl
sigaa/data/unidades/: departamentos.csv  departamentos.jsonl
sigaa/mock/: exemp_docentes_dep_estatistica.html  sigaa_docentes.html
sigaa/sigaa/: items.py  middlewares.py  settings.py
sigaa/sigaa/spiders/: curso.py  docentes.py  docentes_completo.py  ofertas.py  testar_ofertas.py
