[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "requests>=2.32.4",
    "scrapy>=2.13.3",
    "selenium>=4.34.0",
]
