[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "async-timeout>=4.0.3",
    "beautifulsoup4>=4.13.4",
    "brotli>=1.1.0",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.2.0",
    "defusedxml>=0.7.1",
    "httplib2>=0.22.0",
    "httpx>=0.28.1",
    "idna>=3.7",
    "lxml>=6.0.0",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "python-dateutil>=2.8.2",
    "regex>=2023.8.8",
    "requests>=2.32.4",
    "scrapy>=2.13.3",
    "selenium>=4.34.0",
    "six>=1.16.0",
    "soupsieve>=2.5",
    "unidecode>=1.3.7",
    "urllib3>=2.2.2",
]
